Reduced x and y transitions on tracks card to migitate the stuck bug

--- a/styles/Tracks.module.css
+++ b/styles/Tracks.module.css
@@ -55,8 +55,9 @@
 .contain {
   background-color: #f8f8f8;
   border-radius: 20px;
-  width: 90%;
-  margin: auto;
+  width: 100%;
+  margin: 0 2rem;
+  padding: 0 2rem;
   box-shadow: 0px 0px 20px 1px #e6e5e5;
 }
 .next {
